worked on the navbar

--- a/html/index.html
+++ b/html/index.html
@@ -6,34 +6,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Description" content="Votre pressing connecté et éco-responsable. Ateliers éducatifs pour l'entretien des vêtements. Nettoyage respectueux de l'environnement. Réservez en ligne !">
 
+        <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/style/style.css"/>
+
         <title>GreenClean, votre pressing connecté et éco-responsable à Lyon</title>
     </head>
     <body>
         <header>
-            <img src="/pictures/logo/logo_name.svg" alt="logo"/>
+            <img class="logo_name" src="/pictures/logo/logo_name.svg" alt="logo"/>
 
             <nav>
                 <ul>
-                    <li><a href="#">Prestations
+                    <li><a href="#">Prestations</a>
                         <ul>
                             <li><a href="#">Pressing</a></li>
                             <li><a href="#">Blanchisserie</a></li>
                         </ul>
-                    </a></li>
+                    </li>
                     <li><a href="#">Ateliers</a></li>
                     <li><a href="#">Valeurs</a></li>
                 </ul>
             </nav>
 
-            <img src="/pictures/navbar/cart.svg" alt="Pannier de course"/>
+            <img class="cart" src="/pictures/navbar/cart.svg" alt="Pannier de course"/>
 
-            <div>
+            <div class="search">
                 <input type="text" placeholder="Search ...">
-                <button type="submit"><img src="/pictures/navbar/search.svg"/ alt="Icône de recherche"></button>
+                <button type="submit"><img src="/pictures/navbar/search.svg" alt="Icône de recherche"></button>
             </div>
 
-            <a href="#">Inscrivez-vous</a>
-            <a href="#">Connectez-vous</a>
+            <div class="login_connect">
+                <a href="#">Inscrivez-vous</a>
+                <a href="#">Connectez-vous</a>
+            </div>
         </header>
 
         <section>
